examples/core/errors/type_errors/02_annotation_mismatch.output.txt
❌ error[E0101]: Type mismatch
error[E0101]: Type mismatch
  ┌─ input:3:16
1 │ // Type Error: Type mismatch
2 │ // Trying to use $I32 where $Type is expected (function parameter type)
3 │ (x : $I32) -> (x : $Type(1))
                   ^ ----
4 │ 
  = note: $I32 and Type are incompatible types
  = hint: Check that the expression has the expected type
  = hint: Consider adding a type annotation

📝 note: $I32 and Type are incompatible types
🔧 help: Check that the expression has the expected type
🔧 help: Consider adding a type annotation
